--- a/CLOCK_CHAT/templates/enduser/Chats/chat.html
+++ b/CLOCK_CHAT/templates/enduser/Chats/chat.html
@@ -93,6 +93,15 @@
 
 
 
+    <!-- Modal structure -->
+    <div id="emojiModal" class="E-modal">
+        <div class="modal-reacted">
+           
+        </div>
+    </div>
+
+
+
     <style>
         #createGroupChatBtn{
             right: 5%;
