--- a/static/css/clock.css
+++ b/static/css/clock.css
@@ -1460,3 +1460,31 @@
 .carousel-nav:hover {
     color: var(--secondary-color);
 }
+
+
+/* Modal styling */
+.E-modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+}
+
+/* Modal content */
+.modal-reacted {
+    background: linear-gradient(to bottom, #1a1a2e, #16213e);
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    padding: 20px;
+    border-radius: 15px;
+    text-align: center;
+    height: 300px;
+    width: 50%;
+    max-width: 300px;
+    max-height: 300px;
+}
