--- a/CLOCK_CHAT/templates/status/status_view.html
+++ b/CLOCK_CHAT/templates/status/status_view.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block content %}
-<div class="wrapper">
+<div class="wrapper" id="status-wrapper">
   <i style="position:absolute; left: 7%; top:4%; font-size: 22px;" class="fa fa-arrow-left" onclick="back()"></i>
   <i class="fa-solid fa-less-than"  style=" position: absolute;display: flex;left: 10%;"></i>
   <i class="fa-solid fa-greater-than"  style=" position: absolute;display: flex;right: 5%;"></i>
