--- a/CLOCK_CHAT/templates/enduser/toolbar.html
+++ b/CLOCK_CHAT/templates/enduser/toolbar.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
         <link rel="icon" type="image/png" href="{% static 'images/admin-lock.jpeg' %}">
-
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
         <link rel="stylesheet" href="/static/css/clock.css">
         <script src="/static/js/toolbar.js"></script>
 
